faq: edit gc entry errors